Fixed the map pin bug on the Explore page; Fixed the Report layout bug on the Single Report page;

--- a/app/styles/_map.scss
+++ b/app/styles/_map.scss
@@ -26,8 +26,8 @@
   min-height: 320px;
   position: absolute;
   top: 0;
-  left: -420px;
-  width: calc(100% + 420px);
+  left: -480px;
+  width: calc(100% + 480px);
 }
 
 .map--wrapper--expanded,
