--- a/app/styles/_report.scss
+++ b/app/styles/_report.scss
@@ -38,6 +38,11 @@
     max-width: 640px;
     width: 55.38793%;
   }
+    .report--single--wrapper .report.report--single {
+      margin-left: 0;
+      max-width: 100%;
+      width: 68%;
+    }
 
   .report--author {
     border-left: 1px solid rgb(232,232,232);
